fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ h1{
 }
 
 .three-height{
-    height:15vh;
+    height:5vh;
 }
 
 .full-height{
